--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: test_deployment_db_development
+  database: appdeployment_development
   pool: 5
   host: localhost
   username: dbuser
@@ -10,7 +10,7 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: test_deployment_db_test
+  database: appdeployment_test
   pool: 5
   host: localhost
   username: dbuser
@@ -19,7 +19,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: app_db_production
+  database: appdeployment_production
   pool: 5
   host: localhost
   username: dbuser
